server/k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
spec:
  replicas: 3
  selector:
    matchLabels:
      app: blog
# pod信息
  template:
    metadata:
      name: blog
      labels:
        app: blog
# pod信息
    spec:
      containers:
        - name: blog
          image: acc/blog:V0.5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9190
